--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ body {
   background: #e84341;
   color: #fff;
   box-shadow: -7px -7px 4px 0 rgba(0,0,0,.45) inset,4.505px 4.505px 0 1.502px #000;
-  transition: all .5s
+  transition: all .3s
 }
 .button--fw {
   width: 100%
@@ -171,7 +171,7 @@ body {
   line-height: 1.4;
   font-size: 1.25rem;
   font-weight: 400;
-  transition: color .5s
+  transition: color .3s
 }
 .icon-menu {
   display: none
@@ -208,7 +208,7 @@ body {
   z-index: 50;
   padding-top: .625rem;
   padding-bottom: .3125rem;
-  transition: all 1.5s
+  transition: all .5s
 }
 .header._header-scroll {
   position: fixed;
@@ -280,8 +280,8 @@ body {
   z-index: 5
 }
 .footer__copy {
+  color: rgba(255,255,255,.3);
   padding-top: 1.5625rem;
-  opacity: .2;
   font-size: 1.25rem
 }
 .footer__image-dog {
@@ -300,7 +300,7 @@ body {
   z-index: 1
 }
 .footer__copy-link {
-  transition: color .5s
+  transition: color .3s
 }
 [class*=decor] {
   pointer-events: none
@@ -427,17 +427,14 @@ body {
   border-radius: 50%;
   -webkit-filter: drop-shadow(4px 7px 0 #000);
   filter: drop-shadow(4px 7px 0 #000);
-  transition: all .5s;
-  opacity: 0;
-  transition: all .5s;
-  -webkit-transform: scale(0);
-  transform: scale(0)
+  transition: all .2s ease;
+  -webkit-transform: translate(-300%,0) rotate(-720deg);
+  transform: translate(-300%,0) rotate(-720deg)
 }
 .social__item._watcher-view {
-  transition: all 1s ease;
-  opacity: 1;
-  -webkit-transform: scale(1);
-  transform: scale(1)
+  -webkit-transform: translate(0,0) rotate(0);
+  transform: translate(0,0) rotate(0);
+  transition: all .3s ease
 }
 .social__social__link {
   aspect-ratio: 1/1
@@ -453,7 +450,7 @@ body {
 .what__body {
   flex: 1 0 45%;
   position: relative;
-  transition: all .5s ease
+  transition: all .3s ease
 }
 .what .ellipse {
   -webkit-filter: blur(150px);
@@ -466,7 +463,7 @@ body {
   opacity: 0
 }
 .what__label._watcher-view {
-  transition: all .5s ease .5s;
+  transition: all .3s ease .3s;
   opacity: 1
 }
 .what__decor {
@@ -496,7 +493,7 @@ body {
   transition: all .2s
 }
 .what__blok._watcher-view {
-  transition: all .8s ease 1s;
+  transition: all .4s ease .5s;
   -webkit-transform: translate(0,0);
   transform: translate(0,0);
   opacity: 1
@@ -540,49 +537,49 @@ body {
   box-shadow: -11px -9px 4px 0 rgba(0,0,0,.25) inset,7.667px 7.667px 0 0 #000
 }
 .item-buy:nth-child(1) {
-  -webkit-transform: translate(-10%,-10%);
-  transform: translate(-10%,-10%);
+  -webkit-transform: translate(-30%,0);
+  transform: translate(-30%,0);
   opacity: 0;
   transition: all .2s
 }
 .item-buy:nth-child(1)._watcher-view {
-  transition: all .8s ease .3s;
+  transition: all .4s ease .3s;
   -webkit-transform: translate(0,0);
   transform: translate(0,0);
   opacity: 1
 }
 .item-buy:nth-child(2) {
-  -webkit-transform: translate(10%,-10%);
-  transform: translate(10%,-10%);
+  -webkit-transform: translate(30%,0);
+  transform: translate(30%,0);
   opacity: 0;
   transition: all .2s
 }
 .item-buy:nth-child(2)._watcher-view {
-  transition: all .8s ease .3s;
+  transition: all .4s ease .5s;
   -webkit-transform: translate(0,0);
   transform: translate(0,0);
   opacity: 1
 }
 .item-buy:nth-child(3) {
-  -webkit-transform: translate(-10%,10%);
-  transform: translate(-10%,10%);
+  -webkit-transform: translate(-30%,0);
+  transform: translate(-30%,0);
   opacity: 0;
   transition: all .2s
 }
 .item-buy:nth-child(3)._watcher-view {
-  transition: all .8s ease .3s;
+  transition: all .4s ease .3s;
   -webkit-transform: translate(0,0);
   transform: translate(0,0);
   opacity: 1
 }
 .item-buy:nth-child(4) {
-  -webkit-transform: translate(10%,10%);
-  transform: translate(10%,10%);
+  -webkit-transform: translate(30%,0);
+  transform: translate(30%,0);
   opacity: 0;
   transition: all .2s
 }
 .item-buy:nth-child(4)._watcher-view {
-  transition: all .8s ease .3s;
+  transition: all .4s ease .5s;
   -webkit-transform: translate(0,0);
   transform: translate(0,0);
   opacity: 1
@@ -600,7 +597,7 @@ body {
   top: -8%
 }
 .item-buy__number {
-  transition: all .5s;
+  transition: all .3s;
   left: 8%;
   top: -8%;
   position: absolute
@@ -661,7 +658,7 @@ body {
   transition: all .2s
 }
 .booswap__img-content._watcher-view {
-  transition: all .8s ease .3s;
+  transition: all .4s ease .3s;
   -webkit-transform: translate(0,0);
   transform: translate(0,0);
   border-radius: 2.1875rem;
@@ -709,25 +706,25 @@ body {
   align-items: end
 }
 .tokenomics__item:nth-child(1) {
-  -webkit-transform: translate(-10%);
-  transform: translate(-10%);
+  -webkit-transform: translate(-30%);
+  transform: translate(-30%);
   opacity: 0;
   transition: all .2s
 }
 .tokenomics__item:nth-child(1)._watcher-view {
-  transition: all .8s ease .3s;
+  transition: all .4s ease .3s;
   -webkit-transform: translate(0,0);
   transform: translate(0,0);
   opacity: 1
 }
 .tokenomics__item:nth-child(2) {
-  -webkit-transform: translate(10%);
-  transform: translate(10%);
+  -webkit-transform: translate(30%);
+  transform: translate(30%);
   opacity: 0;
   transition: all .2s
 }
 .tokenomics__item:nth-child(2)._watcher-view {
-  transition: all .8s ease .3s;
+  transition: all .4s ease .6s;
   -webkit-transform: translate(0,0);
   transform: translate(0,0);
   opacity: 1
@@ -792,10 +789,10 @@ body {
     width: 100%;
     height: 80%;
     opacity: 0;
-    transition: all 1s ease
+    transition: opacity 1s ease
   }
   .lines._watcher-view {
-    transition: all 1s ease 2.5s;
+    transition: all 1s ease 1.5s;
     opacity: 1
   }
 }
@@ -1377,7 +1374,7 @@ body {
     background-color: #000;
     display: grid;
     grid-template-rows: 1fr auto;
-    transition: left .5s
+    transition: left .3s
   }
   .menu__body::before {
     content: "";
@@ -1386,7 +1383,7 @@ body {
     height: 4.375rem;
     left: -100%;
     top: 0;
-    transition: left .5s;
+    transition: left .3s;
     z-index: 2
   }
   .menu__body::after {
@@ -1428,7 +1425,7 @@ body {
   .icon-menu::after,
   .icon-menu::before {
     content: "";
-    transition: all .5s ease 0s;
+    transition: all .3s ease 0s;
     right: 0;
     position: absolute;
     width: 100%;
@@ -2280,9 +2277,10 @@ body {
     color: #e84341
   }
   .footer__copy-link:hover {
-    color: #e84341
+    color: #fff
   }
   .social__item:hover {
+    transition: all .3s ease;
     -webkit-transform: scale(.95) rotate(15deg);
     transform: scale(.95) rotate(15deg);
     -webkit-filter: drop-shadow(0 0 0 rgba(0, 0, 0, 0));
